# BlockTorch

./: .gitignore  CMakeLists.txt  LICENSE
docs/: CHANGELOG.md  LESSONS.md  METRICS.md  PROJECT.md  README.md  TODO.md
src/: CMakeLists.txt  main.cpp
src/blocks/: Block.cpp  Block.h  StartBlock.cpp  StartBlock.h  StopBlock.cpp  StopBlock.h
src/core/: Params.cpp  Params.h
src/ui/: HomeView.cpp  HomeView.h  MainWindow.cpp  MainWindow.h  WorkspaceSavesView.cpp  WorkspaceSavesView.h  WorkspaceView.cpp  WorkspaceView.h
tests/cpp/: CMakeLists.txt
